--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,15 @@
 [flake8]
-exclude = build,.git,./django/utils/lru_cache.py,./django/utils/six.py,./django/conf/app_template/*,./django/dispatch/weakref_backports.py,./tests/.env,./xmlrunner,tests/view_tests/tests/py3_test_debug.py,tests/template_tests/annotated_tag_function.py
-# ignore = E123,E128,E402,W503,E731,W601
 max-line-length = 119
 
 [isort]
+line_length = 119
+sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER,LOGGING
 combine_as_imports = true
 default_section = THIRDPARTY
-include_trailing_comma = true
 known_first_party = kopytka
+known_django_party = django
+known_logging_party = logging
+include_trailing_comma = true
 multi_line_output = 5
 not_skip = __init__.py
 
